--- a/package.json
+++ b/package.json
@@ -9,11 +9,18 @@
     "export": "next export"
   },
   "dependencies": {
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.4.10",
+    "gsap": "^3.12.7",
+    "lucide-react": "^0.479.0",
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-scroll": "^1.9.3"
+    "react-icons": "^5.5.0",
+    "react-scroll": "^1.9.3",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
